tests/try_build/issue_1.stderr
warning: unused import: `HConsed`
 --> tests/try_build/issue_1.rs:5:19
  |
5 | use hashconsing::{HConsed, HConsign, HashConsign};
  |                   ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: `Cell<RefOrInt<'_>>` cannot be shared between threads safely
  --> tests/try_build/issue_1.rs:37:17
   |
37 |           s.spawn(move |_| {
   |  ___________-----_^
   | |           |
   | |           required by a bound introduced by this call
38 | |             let smuggled_cell = &hcons_cell_ref.get().cell;
39 | |
40 | |             loop {
...  |
44 | |             }
45 | |         });
   | |_________^ `Cell<RefOrInt<'_>>` cannot be shared between threads safely
   |
   = help: within `&HashableCell<RefOrInt<'_>>`, the trait `Sync` is not implemented for `Cell<RefOrInt<'_>>`
note: required because it appears within the type `HashableCell<RefOrInt<'_>>`
  --> tests/try_build/issue_1.rs:18:8
   |
18 | struct HashableCell<T: Eq + PartialEq + Copy> {
   |        ^^^^^^^^^^^^
   = note: required because it appears within the type `&HashableCell<RefOrInt<'_>>`
   = note: required for `Arc<&HashableCell<RefOrInt<'_>>>` to implement `Send`
   = note: required because it appears within the type `HConsed<&HashableCell<RefOrInt<'_>>>`
note: required because it's used within this closure
  --> tests/try_build/issue_1.rs:37:17
   |
37 |         s.spawn(move |_| {
   |                 ^^^^^^^^
note: required by a bound in `crossbeam_utils::thread::Scope::<'env>::spawn`
  --> $CARGO/crossbeam-utils-0.8.14/src/thread.rs
   |
   |         F: Send + 'env,
   |            ^^^^ required by this bound in `crossbeam_utils::thread::Scope::<'env>::spawn`
